# Oliver

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  changeTheme.js  changeTheme2.js  changeTheme3.js  changeTheme4.js  package-lock.json  package.json
backend/: .env.example  drizzle.config.js  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
backend/src/: index.ts
docs/: ARCHITECTURE_MANIFESTO.md  CENTRAL_MEMORY.md  DECISIONS.md  E2E_GO_LIVE_CHECKLIST.md  OPS_RUNBOOK.md  PROJECT_MEMORY.md
electron/: icon.icns  main.mjs  preload.mjs
frontend/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
scripts/: after-pack.mjs  bundle-embedded-backend.mjs  deploy-client.sh  notarize.mjs  prepare-pack.mjs  setup-ssh-key.sh  update-client.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/embedded-backend/: README.txt  package-lock.json  package.json
src-tauri/embedded-backend/drizzle/: 0000_platinum_33_37.sql  0003_appointments_checkin.sql  0004_invoicing_vat_checkout.sql  0005_audit_logs_delta.sql  0008_checkout_inventory_deduct.sql  0011_scheduling_overbooking.sql  0013_advanced_checkout_payments.sql  0018_loyalty_system.sql  0019_client_history_and_formulas.sql  0020_waivers_and_hardware_queue.sql  0021_tse_transactions.sql  0022_device_trust_and_pins.sql  0024_appointments_deleted_at.sql  0026_salon_catalog_active.sql  0027_client360_operations.sql  0028_commission_settings.sql  0030_sqlite_maintenance_settings.sql
src-tauri/embedded-backend/drizzle/meta/: _journal.json
src-tauri/src/: lib.rs  main.rs
(+226 files in other folders)
